--- a/asset/css/front.css
+++ b/asset/css/front.css
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-    max-width: 1050px;
+    max-width: 1150px;
 }
 
 a {
@@ -733,11 +733,21 @@ form .icon-question-sign {
     max-height: 50px;
 }
 
+.news-item-block-image {
+    text-align: center;
+}
+
 .news-item-block-image img {
-    width: 95px;
-    height: 95px;
-    margin-bottom: 15px;
+    width: 100px;
+    height: 100px;
     border-radius: 8px;
+}
+
+.news-item-block-image h2 {
+    font-size: 11px;
+    font-weight: normal;
+    margin: 5px 0 15px 0;
+    padding: 0;
 }
 
 .news-story-page-side {
