--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -116,8 +116,6 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
             <div class="col-md-12">
                 <ul class="nav navbar-nav navbar-right">
                     <li><?php echo $this->widget('shop-basket'); ?></li>
-                    <li><a href="https://www.shobadebaz.com/contact">تماس با ما</a></li>
-                    <li><a href="https://www.shobadebaz.com/page/about/">درباره ما</a></li>
                     <li><a href="https://www.shobadebaz.com/contact" class="pi-header-tel">۰۲۱-۷۷۰۰۴۴۱۲</a></li>
                 </ul>
                 <?php echo $this->widget('system-user-bar'); ?>
@@ -164,6 +162,12 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
                     </li>
                     <li>
                         <a href="http://shop.shobadebaz.com"><i class="fa fa-shopping-cart"></i> فروشگاه آنلاین</a>
+                    </li>
+                    <li>
+                        <a href="https://www.shobadebaz.com/contact"><i class="fa fa-envelope"></i> تماس با ما</a>
+                    </li>
+                    <li>
+                        <a href="https://www.shobadebaz.com/page/about/"><i class="fa fa-hourglass-end"></i> درباره ما</a>
                     </li>
                 </ul>
             </div>
