--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -116,7 +116,7 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
             <div class="col-md-12">
                 <ul class="nav navbar-nav navbar-right">
                     <li><?php echo $this->widget('shop-basket'); ?></li>
-                    <li><a href="https://www.shobadebaz.com/contact" class="pi-header-tel">۰۲۱-۷۷۰۰۴۴۱۲</a></li>
+                    <!-- <li><a href="https://www.shobadebaz.com/contact" class="pi-header-tel">۰۲۱-۷۷۰۰۴۴۱۲</a></li> -->
                 </ul>
                 <?php echo $this->widget('system-user-bar'); ?>
             </div>
