--- a/asset/css/front.css
+++ b/asset/css/front.css
@@ -435,7 +435,7 @@ form .icon-question-sign {
 }
 
 #pi-shop .pi-nav .navbar-default, #pi-order .pi-nav .navbar-default {
-    background-color: #F2BF48;
+    background-color: #e5b340;
     border-color: #F5ECC1;
     transition: all 0.6s;
     -webkit-transition: all 0.6s;
@@ -478,7 +478,7 @@ form .icon-question-sign {
 .pi-nav .navbar-default .navbar-nav > li > a:hover,
 .pi-nav .navbar-default .navbar-nav > li > a:focus {
     color: #fff;
-    background-color: #F2BF48;
+    background-color: #e5b340;
     border-radius: 8px;
     transition: all 0.6s;
     -webkit-transition: all 0.6s;
