--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -116,7 +116,7 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
             <div class="col-md-12">
                 <ul class="nav navbar-nav navbar-right">
                     <li><?php echo $this->widget('shop-basket'); ?></li>
-                    <!-- <li><a href="https://www.shobadebaz.com/contact" class="pi-header-tel">۰۲۱-۷۷۰۰۴۴۱۲</a></li> -->
+                    <?php /* <li><a href="https://www.shobadebaz.com/contact" class="pi-header-tel">۰۲۱-۷۷۰۰۴۴۱۲</a></li> */ ?>
                 </ul>
                 <?php echo $this->widget('system-user-bar'); ?>
             </div>
@@ -161,7 +161,7 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
                         <a href="https://www.shobadebaz.com/news/معرفی-شعبده-بازان"><i class="fa fa-users"></i> معرفی شعبده بازان</a>
                     </li>
                     <li>
-                        <a href="http://shop.shobadebaz.com"><i class="fa fa-shopping-cart"></i> فروشگاه آنلاین</a>
+                        <a href="https://www.shobadebaz.com/shop"><i class="fa fa-shopping-cart"></i> فروشگاه آنلاین</a>
                     </li>
                     <li>
                         <a href="https://www.shobadebaz.com/contact"><i class="fa fa-envelope"></i> تماس با ما</a>
@@ -319,10 +319,26 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
                 <div class="col-md-4">
                     <h4>شعبده باز در شبکه های اجتماعی</h4>
                     <ul class="list-inline">
-                        <li><a target="_blank" title="Facebook" href="http://www.facebook.com/profile.php?id=100001901675161"><img class="img-responsive" src="<?php echo $this->assetTheme('image/social-facebook.png') ?>" alt="Facebook"></a></li>
-                        <li><a target="_blank" title="Instagram" href="http://instagram.com/shobadebaz"><img class="img-responsive" src="<?php echo $this->assetTheme('image/social-instagram.png') ?>" alt="Instagram"></a></li>
-                        <li><a target="_blank" title="Telegram" href="https://telegram.me/myshobadebaz"><img class="img-responsive" src="<?php echo $this->assetTheme('image/social-telegram.png') ?>" alt="telegram"></a></li>
-                        <li><a target="_blank" title="Aparat" href="http://www.aparat.com/shobadebaz"><img class="img-responsive" src="<?php echo $this->assetTheme('image/social-youtube.png') ?>" alt="Aparat"></a></li>
+                        <li>
+                            <a target="_blank" title="Twitter" href="https://twitter.com/shobadebaz_site">
+                                <img class="img-responsive" src="<?php echo $this->assetTheme('image/social-twitter.png') ?>" alt="Twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" title="Instagram" href="https://instagram.com/shobadebaz">
+                                <img class="img-responsive" src="<?php echo $this->assetTheme('image/social-instagram.png') ?>" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" title="Telegram" href="https://telegram.me/shobadebaz_site">
+                                <img class="img-responsive" src="<?php echo $this->assetTheme('image/social-telegram.png') ?>" alt="telegram">
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" title="Aparat" href="https://www.aparat.com/shobadebaz">
+                                <img class="img-responsive" src="<?php echo $this->assetTheme('image/social-aparat.png') ?>" alt="Aparat">
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -339,7 +355,7 @@ $this->footScript()->appendFile($this->assetTheme('js/front.js'));
     <div class="container">
         <div class="row">
             <div class="text-left col-md-6" data-rel="license">تمام حقوق مطالب برای وب سایت <a href="https://www.shobadebaz.com" title="<?php echo _escape($sitename); ?>"><?php echo _escape($sitename); ?></a> محفوظ است.</div>
-            <div class="text-right col-md-6" data-rel="license">طراحی و توسعه <a title="فراگسترش" href="http://www.faragostaresh.com" target="_blank">فراگسترش</a>            </div>
+            <div class="text-right col-md-6" data-rel="license">طراحی و توسعه <a title="فراگسترش" href="https://www.faragostaresh.com" target="_blank">فراگسترش</a>            </div>
         </div>
     </div>
 </footer>
