--- a/asset/css/front.css
+++ b/asset/css/front.css
@@ -441,7 +441,7 @@ form .icon-question-sign {
 
 #pi-shop .pi-nav .navbar-default, #pi-order .pi-nav .navbar-default {
     background-color: #121A29;
-    border-color: #121A29;
+    border-color: #CDEAF9;
     transition: all 0.6s;
     -webkit-transition: all 0.6s;
     -moz-transition: all 0.6s;
